# cs275-assignment1-skeletal

./: .gitignore  README.md
reference/: .gitignore  CMakeLists.txt  data.txt
reference/include/camera/: fpc.hpp
reference/include/gltf/: tinygltf_helper.h
reference/include/pipeline/: mesh.hpp  skeleton.hpp
reference/include/shader/: shader.hpp
reference/include/skeletal/: animator.hpp  mesh.hpp  skeleton.hpp
reference/res/mdl/: dancing_cylinder.gltf  weaving_flag.gltf
reference/res/shader/: mesh.fs  mesh.vs  skeleton.fs  skeleton.vs
reference/src/camera/: fpc.cpp
reference/src/gltf/: tinygltf_helper.cpp
reference/src/pipeline/: mesh.cpp  skeleton.cpp
reference/src/shader/: shader.cpp
reference/src/skeletal/: animator.cpp  mesh.cpp  skeleton.cpp
reference/test/: main.cpp  tinygltfExamples.cpp
